--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/3D_Sniper4.loader.js";
+      var loaderUrl = buildUrl + "/3D_Sniper5.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/3D_Sniper4.data.br",
-        frameworkUrl: buildUrl + "/3D_Sniper4.framework.js.br",
-        codeUrl: buildUrl + "/3D_Sniper4.wasm.br",
+        dataUrl: buildUrl + "/3D_Sniper5.data",
+        frameworkUrl: buildUrl + "/3D_Sniper5.framework.js",
+        codeUrl: buildUrl + "/3D_Sniper5.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "NEXSTEAD",
         productName: "3D Sniper Multiplayer",
