--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/3D_Sniper5.loader.js";
+      var loaderUrl = buildUrl + "/3D_Sniper6.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/3D_Sniper5.data",
-        frameworkUrl: buildUrl + "/3D_Sniper5.framework.js",
-        codeUrl: buildUrl + "/3D_Sniper5.wasm",
+        dataUrl: buildUrl + "/3D_Sniper6.data.gz",
+        frameworkUrl: buildUrl + "/3D_Sniper6.framework.js.gz",
+        codeUrl: buildUrl + "/3D_Sniper6.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "NEXSTEAD",
         productName: "3D Sniper Multiplayer",
